path-based/chai-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chai
spec:
  replicas: 2
  selector:
    matchLabels:
      app: chai 
  template:
    metadata:
      labels:
        app: chai 
    spec:
      containers:
      - name: chai 
        image: nginxdemos/hello:plain-text
        ports:
        - containerPort: 80
