path-based/samosa-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: samosa
  namespace: cafe
spec:
  replicas: 2
  selector:
    matchLabels:
      app: samosa
  template:
    metadata:
      labels:
        app: samosa
    spec:
      containers:
      - name: samosa
        image: nginxdemos/hello:plain-text
        ports:
        - containerPort: 80
